Fixed home page and css Issues
Fixed H2 so it is black
Fixed problem with the header not showing User signed in when not found
on database
Changed characters to " on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 
 /* -- Start Css */
 h2{
-	color:white;
+	color:black;
 	font-family: Georgia,Serif;
 	font-size: 24px;
 }
